--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ File(GLOB SRC_FILES
 )
 
 # fetch googletest
+message(STATUS "Fetching googletest")
 FetchContent_Declare(
   googletest
   GIT_REPOSITORY https://github.com/google/googletest.git
@@ -25,7 +26,6 @@ target_link_libraries(${PROJECT_NAME}
                           openai_cpp
 )
 target_include_directories(${PROJECT_NAME} PRIVATE openai_cpp)
-
 
 add_test(
     NAME ${PROJECT_NAME}
