--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,5 +37,6 @@ add_custom_command(
      COMMENT "Run tests"
      POST_BUILD 
      WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-     COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIGURATION> -R "^${This}$" --output-on-failures
+     COMMAND ${This}
+     #COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIGURATION> -R "^${This}$" --output-on-failures
 )
